--- a/index.html
+++ b/index.html
@@ -27,13 +27,62 @@
         </div>
     </header>
     <main>
-        <div class="card-img">
-            <img src="./assets/images/sac.png" alt="sac">
-            <div  class="text-card">
-                <p class="txt">Sac Fleur</p>
-                <p class="annee">2023</p>
+        <div class="container">
+            <div class="box">
+                <div class="card-img">
+                    <img src="./assets/images/sac.png" alt="sac">
+                    <div  class="text-card">
+                        <p class="txt">Sac Fleur</p>
+                        <p class="annee">2023</p>
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="box">
+                <div class="card-img">
+                    <img src="./assets/images/sac.png" alt="sac">
+                    <div  class="text-card">
+                        <p class="txt">Sac Fleur</p>
+                        <p class="annee">2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-img">
+                    <img src="./assets/images/sac.png" alt="sac">
+                    <div  class="text-card">
+                        <p class="txt">Sac Fleur</p>
+                        <p class="annee">2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-img">
+                    <img src="./assets/images/sac.png" alt="sac">
+                    <div  class="text-card">
+                        <p class="txt">Sac Fleur</p>
+                        <p class="annee">2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-img">
+                    <img src="./assets/images/sac.png" alt="sac">
+                    <div  class="text-card">
+                        <p class="txt">Sac Fleur</p>
+                        <p class="annee">2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-img">
+                    <img src="./assets/images/sac.png" alt="sac">
+                    <div  class="text-card">
+                        <p class="txt">Sac Fleur</p>
+                        <p class="annee">2023</p>
+                    </div>
+                </div>
+            </div>
+        </div>      
     </main>
 </body>
 </html>
