--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         </div>
         <div class="image">
            <img class="img" src="./assets/images/papillon.jpg" alt="image-papillon">
+           <div class="presentation">
+            <p>Bienvenue je vous présente mes créations .</p>
         </div>
+        </div>
+        
     </header>
     <main>
         <div class="container">
